--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,34 @@
         <title>Intro Component with Sign-Up Form</title>
     </head>
 
-    <body class="| [ bg-image ] [ flex-center ] [ bg-primary ]">
-        <main class="| [ flex-space ]">
-            <article class="hero | [ flex-center ] [ clr-primary ]">
-                <h1 class="| [ fnt-bold ]">Learn to code by watching others</h1>
-                <p class="| [ fnt-medium ]">See how experienced developers solve problems in real-time. Watching
-                    scripted tutorials is great, but
-                    understanding how developers think is invaluable. </p>
+    <body class="[ bg-image ] [ flex-center ] [ bg-primary ]">
+        <main class="[ flex-space-center ]">
+            <article class="hero [ flex-center ] [ clr-primary ]">
+                <h1 class="[ fnt-bold ]">Learn to code by watching others</h1>
+                <p class="[ fnt-medium ]">See how experienced developers solve problems in real-time. Watching
+                    scripted tutorials is great, but understanding how developers think is invaluable. </p>
             </article>
 
-            <div class="action | [ flex-space-stretch ] [ fnt-bold ]">
-                <div class="offer | [ clr-primary ] [ fnt-bold ] [ b-shadow-primary ]">
-                    Try it free 7 days <span class="| [ fnt-regular ]">then $20/mo. thereafter</span>
+            <div class="action [ flex-start-stretch ] [ fnt-bold ]">
+                <div class="offer [ clr-primary ] [ fnt-bold ] [ b-shadow-primary ]">
+                    Try it free 7 days <span class="[ fnt-regular ]">then $20/mo. thereafter</span>
                 </div>
 
-                <form class="| [ flow ] [ bg-secondary ] [ b-shadow-primary ]">
-                    <input aria-label="First Name" placeholder="First Name" type="text">
-                    <input aria-label="Last Name" placeholder="Last Name" type="text">
-                    <input aria-label="Email Address" placeholder="Email Address" type="text">
-                    <input aria-label="Password" placeholder="Password" type="password">
-                    <button class="| [ clr-primary ] [ fnt-semi-bold ]">Claim your free trial</button>
-                    <p class="| [ fnt-medium ]">By clicking the button, you are agreeing to our
-                        <span class="| [ clr-exception ] [ fnt-bold ]">Terms and Services</span></p>
+                <form class="[ flow ] [ bg-secondary ] [ b-shadow-primary ]" onkeydown="return event.key !== 'Enter';">
+                    <input class="input-field input-first-name" aria-label="First Name" placeholder="First Name"
+                           type="text">
+                    <input class="input-field input-last-name" aria-label="Last Name" placeholder="Last Name"
+                           type="text">
+                    <input class="input-field input-email" aria-label="Email Address" placeholder="Email Address"
+                           type="email">
+                    <input class="input-field input-password" aria-label="Password" placeholder="Password"
+                           type="password">
+                    <button class="[ clr-primary ] [ fnt-semi-bold ]">Claim your free trial</button>
+                    <p class="[ fnt-medium ]">By clicking the button, you are agreeing to our
+                        <span class="[ clr-exception ] [ fnt-bold ]">Terms and Services</span></p>
                 </form>
             </div>
         </main>
-        <script src="js/script.js"></script>
+        <script src="js/script.js" type="module"></script>
     </body>
 </html>
